tests/enum_into/compile_fail/container/name_value_attribute.stderr
error: expected a list of target enums, for example #[enum_into(Target1, Target2)]
 --> tests/enum_into/compile_fail/container/name_value_attribute.rs:4:1
  |
4 | #[enum_into = "Target"]
  | ^
